--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-streamlit
-langchain
-pypdf2
-python-dotenv
-openai
-anthropic  # For Claude
-litellm    # Unified API for 100+ LLMs
-faiss-cpu
+streamlit>=1.30.0
+langchain>=0.1.0
+langchain-community>=0.0.10
+pypdf2>=3.0.0
+python-dotenv>=1.0.0
+openai>=1.10.0
+anthropic>=0.7.0
+litellm>=1.0.0
+faiss-cpu>=1.7.4
+streamlit-extras>=0.3.5
